Fixed logo/canvas spacing

--- a/styles/global.less
+++ b/styles/global.less
@@ -681,7 +681,7 @@ span.delimiter {
 #canvas-wrapper,
 #canvas {
   width: 100%;
-  margin-top:100px;
+  margin-top: 82px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 0px;
