--- a/styles/organism/header.less
+++ b/styles/organism/header.less
@@ -4,7 +4,7 @@
 .header-brand {
     position: absolute;
     top: 24px;
-    right: -50px;
+    right: -16px;
     z-index: 1000;
 
     width: 230px;
